Kubernetes/yml/Addon-Function/ingress/nginx/06-rewrite/app-root-echo-example-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-echo-with-rewrite
  annotations:
    nginx.ingress.kubernetes.io/app-root: /app
spec:
  rules:
  - host: app-root.echo.example 
    http:
      paths:
      - path: /
        backend:
          serviceName: echo
          servicePort: 80
      - path: /abc
        backend:
          serviceName: echo
          servicePort: 80
